# Neuroproof_2D

./: CMakeLists.txt  NeuroProof_stack.cpp  NeuroProof_stack_learn.cpp  README.md  convert_wshed2.py
Algorithms/: MergePriorityFunction.cpp  MergePriorityFunction.h  RagAlgs.h
DataStructures/: MitoSpDetector.h  NodeType.h  Rag.h  RagEdge.h  RagNode.h  Stack.cpp  Stack.h  StackLearn.cpp  StackPredict.cpp
Example/nissl/: img.00066_prediction.h5  img.00066_watershed.h5  img.00069_prediction.h5  img.00069_watershed.h5  img.00071_prediction.h5  img.00071_watershed.h5
FeatureManager/: FeatureManager.cpp  FeatureManager.h
Utilities/: folder.h  string_functions.h  unique_row_matrix.h
